# BAAS-ULTRA

./: .env.example  .gitignore  FEATURES.md  IMPROVEMENTS.md  QUICK_START_FRONTEND.md  README.md  docker-compose.yml
api-gateway/: package-lock.json  package.json  server.js
api-gateway/middleware/: advanced.js
docs/: ARCHITECTURE.md  QUICK_START.md
frontend/: .eslintrc.responsive.json  FEATURES.md  IMPROVEMENTS.md  README.md  RESPONSIVE_IMPROVEMENTS.md  START_HERE.md  TESTING_GUIDE.md  clear.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.optimized.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CardModal.jsx  CryptoWidget.jsx  Dashboard.jsx  ErrorBoundary.jsx  LoadingSpinner.jsx  Login.jsx  MarketplaceWidget.jsx  Register.jsx  SettingsModal.jsx  SocialFeed.jsx  SuperDashboard.jsx  Toast.jsx  TransferModal.jsx  VoiceAssistant.jsx
frontend/src/hooks/: useMediaQuery.js
frontend/src/services/: api.js  mockApi.js
scripts/: start-all.bat
services/account-service/: Dockerfile  go.mod  main.go
services/analytics-service/: Dockerfile  main.py  requirements.txt
services/auth-service/: Dockerfile  go.mod  main.go
services/card-service/: Dockerfile  go.mod  main.go
services/kyc-service/: Dockerfile  main.py  requirements.txt
services/ledger-service/: Cargo.toml  Dockerfile
services/ledger-service/src/: main.rs
services/notification-service/: Dockerfile  go.mod  main.go
services/payment-service/: Dockerfile  go.mod  main.go
services/risk-service/: Dockerfile  main.py  requirements.txt
(+3 files in other folders)
